erDiagram

    USERS {
        BIGSERIAL user_id PK
        VARCHAR name
        user_type user_type
        BIGINT total_seen_notifications
        TIMESTAMP created_at
    }

    ADMIN {
        BIGINT admin_id PK
        BIGINT phone
        VARCHAR password
    }

    CUSTOMER {
        BIGINT customer_id PK
        BIGINT phone
        VARCHAR password
        TEXT address
    }

    DELIVERY_PARTNER {
        BIGINT delivery_partner_id PK
        BIGINT phone
        VARCHAR password
        BOOLEAN is_available
        BOOLEAN is_active
        TIMESTAMP last_delivery_at
    }

    CUISINE {
        BIGSERIAL cuisine_id PK
        VARCHAR name
        TIMESTAMP created_at
    }

    FOOD_ITEM {
        BIGSERIAL food_item_id PK
        BIGINT cuisine_id FK
        VARCHAR name
        NUMERIC price
        BOOLEAN available
        TIMESTAMP created_at
    }

    CARTS {
        BIGSERIAL cart_id PK
        BIGINT user_id FK
    }

    CART_ITEMS {
        BIGSERIAL id PK
        BIGINT cart_id FK
        BIGINT food_item_id FK
        INT quantity
        TIMESTAMP created_at
    }

    ORDERS {
        BIGSERIAL order_id PK
        BIGINT customer_id FK
        NUMERIC final_amount
        order_status status
        VARCHAR payment_mode
        TIMESTAMP placed_at
        TIMESTAMP delivered_at
    }

    ORDER_ITEMS {
        BIGSERIAL order_item_id PK
        BIGINT order_id FK
        BIGINT food_item_id FK
        INT quantity
        NUMERIC price
    }

    ORDER_ASSIGNMENT {
        BIGINT order_id PK
        BIGINT delivery_partner_id PK
        TIMESTAMP created_at
    }

    PRICE_DISCOUNT {
        SERIAL id PK
        NUMERIC minimum_amount
        NUMERIC discount_percentage
        TIMESTAMP created_at
    }

    NOTIFICATION {
        BIGSERIAL notification_id PK
        BIGINT user_id FK
        user_type sender
        user_type receiver
        TEXT message
        TIMESTAMP created_at
    }

    USERS ||--|| ADMIN : has
    USERS ||--|| CUSTOMER : has
    USERS ||--|| DELIVERY_PARTNER : has

    USERS ||--|| CARTS : owns
    CARTS ||--o{ CART_ITEMS : contains
    FOOD_ITEM ||--o{ CART_ITEMS : added_in

    CUISINE ||--o{ FOOD_ITEM : categorizes

    CUSTOMER ||--o{ ORDERS : places
    ORDERS ||--o{ ORDER_ITEMS : contains
    FOOD_ITEM ||--o{ ORDER_ITEMS : ordered

    ORDERS ||--|| ORDER_ASSIGNMENT : assigned
    DELIVERY_PARTNER ||--o{ ORDER_ASSIGNMENT : delivers

    USERS ||--o{ NOTIFICATION : receives